# graph-kernel-svm

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
reports/: method_notes.md
src/graph_kernel_svm/: __init__.py
src/graph_kernel_svm/data/: __init__.py  synthetic.py  tu_dataset.py
src/graph_kernel_svm/graphs/: __init__.py  types.py
src/graph_kernel_svm/kernels/: __init__.py  graph_stats.py  shortest_path.py  wl.py
src/graph_kernel_svm/models/: __init__.py  svm.py
src/graph_kernel_svm/scripts/: download_mutag.py  download_tu_dataset.py  inspect_dataset.py  plot_all_results.py  plot_results.py  run_all_experiments.py  run_experiments.py  train_baseline.py
src/graph_kernel_svm/utils/: __init__.py  cache.py  kernel_diagnostics.py
tests/: test_cache.py  test_download_tu_dataset.py  test_graph_stat_kernel.py  test_inspect_dataset.py  test_kernel_diagnostics.py  test_multi_dataset_experiments.py  test_plot_results.py  test_project_hardening.py  test_run_experiments.py  test_shortest_path_kernel.py  test_svm_tuning.py  test_synthetic_data.py  test_train_baseline.py  test_tu_dataset.py  test_wl_kernel.py
