[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-kernel-svm"
version = "0.1.0"
description = "Custom graph kernel SVM classifier with from-scratch graph kernels."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scikit-learn",
    "networkx",
    "matplotlib",
]

[project.scripts]
graph-kernel-svm-train = "graph_kernel_svm.scripts.train_baseline:main"
graph-kernel-svm-download-mutag = "graph_kernel_svm.scripts.download_mutag:main"
graph-kernel-svm-experiments = "graph_kernel_svm.scripts.run_experiments:main"
graph-kernel-svm-plot-results = "graph_kernel_svm.scripts.plot_results:main"
graph-kernel-svm-inspect-dataset = "graph_kernel_svm.scripts.inspect_dataset:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
